<resources>
    <string name="app_name">FavDish</string>
    <string name="titleAllDishes">All Dishes</string>
    <string name="titleFavoriteDishes">Favorite</string>
    <string name="titleRandomDish">Random Dish</string>
    <string name="titleDishDetails">Dish Details</string>
    <string name="SplashScreenTitle">FavDish</string>

    <string name="lblAddDish">ADD DISH</string>
    <string name="imageContentDescription">Image</string>
    <string name="lblTitle">Title</string>
    <string name="lblType">Type</string>
    <string name="lblCategory">Category</string>
    <string name="lblIngredients">Ingredients</string>
    <string name="lblCookingTimeInMinutes">Cooking Time In Minutes</string>
    <string name="lblDirectionsToCook">Directions to Cook</string>

    <string name="titleStringImageAction">select Image Action</string>
    <string name="lblCamera">Camera</string>
    <string name="lblGallery">Gallery</string>

    <string name="titleSelectDishType">SELECT DISH TYPE</string>
    <string name="titleSelectDishCategory">SELECT DISH CATEGORY</string>
    <string name="titleSelectDishCookingTime">SELECT DISH COOKING TIME</string>

    <string name="errMsgSelectedDishImage">Select Dish Image.</string>
    <string name="errMsgSelectedDishTitle">Select Dish Title.</string>
    <string name="errMsgSelectedDishType">Select Dish Type.</string>
    <string name="errMsgSelectedDishCategory">Select Dish Category.</string>
    <string name="errMsgSelectedDishIngredients">Select Dish Ingredients.</string>
    <string name="errMsgSelectedDishCookingTime">Select Dish Cooking Time.</string>
    <string name="errMsgSelectedDishCookingDirections">Select Dish Cooking Instructions.</string>
    <string name="noDishesAddedYet">No Dishes Added Yet</string>

    <string name="lblEstimateCookingTime">The approx time required to cook the dish is %1$s minutes.</string>
    <string name="lblNoFavoriteDishesAddedYet">No favorite dishes added yet!!!</string>

    <string name="actionEditDish">EDIT DISH</string>
    <string name="actionDeleteDish">DELETE DISH</string>

    <string name="editDish">Edit Dish</string>
    <string name="addDish">Add Dish</string>
    <string name="deleteDish">Delete Dish</string>
    <string name="msgDeleteDishDialog">Are you sure you want to delete %1$s.</string>
    <string name="lblYes">Yes</string>
    <string name="lblNo">No</string>

    <string name="lblBtnUpdate">UPDATE</string>

    <string name="msgAlreadyAddedToFavorites">You have already added the dish to your favorites.</string>
    <string name="pleaseWait">Please Wait</string>
</resources>