<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srlRandomDish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.RandomDishFragment">

    <ScrollView
        android:id="@+id/rlDishDetailMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".view.fragments.DishDetailsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/flDishImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivDishImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:background="@color/dishImageBackground"
                    android:contentDescription="@string/imageContentDescription"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/favorite_button_background"
                    android:elevation="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/ivFavoriteDish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/imageContentDescription"
                        android:src="@drawable/ic_favorite_unselected" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/flDishImage"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="@color/blueGrey700"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:text="Dish Title" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/grey700"
                android:textSize="@dimen/_16sdp"
                tools:text="Type" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvType"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/grey700"
                android:textSize="@dimen/_14sdp"
                tools:text="Category" />

            <TextView
                android:id="@+id/tvIngredientsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCategory"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/lblIngredients"
                android:textColor="@color/blueGrey700"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvIngredientsLabel"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColor="@color/grey700"
                android:textSize="@dimen/_14sdp"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/tv_cooking_direction_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvIngredients"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/lblDirectionsToCook"
                android:textColor="@color/blueGrey700"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCookingDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_cooking_direction_label"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColor="@color/grey700"
                android:textSize="@dimen/_14sdp"
                tools:text="Cooking Instructions" />

            <TextView
                android:id="@+id/tvCookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCookingDirection"
                android:layout_margin="@dimen/_16sdp"
                android:gravity="center"
                android:textColor="@color/grey700"
                android:textSize="@dimen/_12sdp"
                tools:text="@string/lblEstimateCookingTime" />
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>